--- a/app/src/main/res/layout/loadingscreen_layout.xml
+++ b/app/src/main/res/layout/loadingscreen_layout.xml
@@ -17,7 +17,7 @@ android:gravity="center" >
         android:id="@+id/statusView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Unchanged"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
